# khinyu-assistant-ai

./: .gitignore  README.md  pyproject.toml
src/khinyu_assistant_ai/: __main__.py
src/khinyu_assistant_ai/chat/: controllers.py  schemas.py  utils.py
