[project]
name = "khinyu-assistant-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "khinyu", email = "khinyu2000@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.13.0",
    "python-dotenv>=1.0.1",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index>=0.12.8",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
assistant = "khinyu_assistant_ai.__main__:main"


[tool.pdm]
distribution = true

